<?php
namespace App\Models;
use Illuminate\Database\Eloquent\Model;

class FavoriteList extends Model
{
    protected $fillable = ['user_id', 'product_id', 'added_at'];

    public function user()
    {
        return $this->belongsTo(User::class);
    }

    public function product()
    {
        return $this->belongsTo(Product::class);
    }
}